# Chat

./: .gitignore  Chat.cabal  Dockerfile  makefile
app/: Main.hs
static/: index.htm
